[package]
name = "doless"
version = "0.4.0"
edition = "2021"
description = "A Rust macro to simplify struct mapping , injects cache lookup logic directly into your functions ,and function utilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nawajar/DoLess"
keywords = [
    "macro",
    "procedural",
    "struct",
    "mapping",
    "timing",
    "cache",
    "cache function",
]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"
[dependencies]
doless_core = { path = "./core", version = "0.4.0", package = "doless_core" }
doless_macros = { path = "./macros", version = "0.4.0", package = "doless_macros" }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
