[package]
name = "doless"
version = "0.4.0"
edition = "2021"
description = "A Rust macro to simplify struct mapping , injects cache lookup logic directly into your functions ,and function utilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nawajar/DoLess"
keywords = [
    "macro",
    "struct",
    "mapping",
    "timing",
    "cache",
]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"
[dependencies]
doless_core = { version = "0.4.0" }
doless_macros = { version = "0.4.0" }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
