[package]
name = "doless_macros"
version = "0.3.0"
edition = "2021"
description = "A Rust macro to simplify struct mapping and function utilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nawajar/DoLess"
keywords = ["macro", "procedural", "struct", "mapping", "timing"]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1.0.41"
proc-macro2 = "1.0.101"
proc-macro-error = { version = "1.0.4", default-features = false }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"



[lib]
proc-macro = true